--- a/src/containers/Menu/Menu.css
+++ b/src/containers/Menu/Menu.css
@@ -55,15 +55,13 @@
   margin: 20px 0 8px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: #E09C9E;
+  overflow: hidden;
   border-radius: 50%;
 }
 
-.menu__home-bot-icon {
-  margin-bottom: 4px;
-  font-size: 48px;
-  color: #FFFFFF;
+.menu__home-bot img {
+  height: 100%;
+  display: block;
 }
 
 .menu__home-bot span {
