--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -4,20 +4,40 @@
 }
 
 .header i {
-  font-size: 20px;
+  font-size: 24px;
+  display: block;
 }
 
 .header__group {
+  padding: 8px 12px 14px;
   height: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   position: relative;
 }
 
 .header__nav {
+  width: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
+  left: 0;
+  background-color: #FFFFFF;
+}
+
+.header__nav nav {
+  width: 100%;
+  padding: 20px 12px 0;
+}
+
+.header__nav nav ul {
+  padding: 20px 0 0;
+}
+
+.header__nav nav ul li {
+  padding: 12px 0;
+  border-bottom: 2px solid #E09C9E;
 }
 
 .header__nav--closed {
@@ -26,6 +46,10 @@
 
 .header__nav--open {
   display: block;
+}
+
+.header__menu-hamburger {
+
 }
 
 .header__logo {
