--- a/src/containers/Menu/Menu.css
+++ b/src/containers/Menu/Menu.css
@@ -57,10 +57,11 @@
   justify-content: center;
   overflow: hidden;
   border-radius: 50%;
+  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 .menu__home-bot img {
-  height: 100%;
+  height: 160%;
   display: block;
 }
 
