--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,9 @@
 .footer {
   width: 100%;
   height: 80px;
+  margin-top: auto;
   display: flex;
   align-items: center;
-  position: absolute;
-  bottom: 0;
   background-color: #313131;
 }
 
@@ -15,14 +14,12 @@
 }
 
 .footer__info {
-  padding: 0 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .footer__info-contact a {
-  margin: 4px 0;
   display: flex;
   flex-direction: column;
 }
