--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -5,6 +5,8 @@
 #root {
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
@@ -34,5 +36,12 @@ a {
 
 .container {
   width: 95%;
-  margin: 0 auto;
+  height: calc(100% - 140px);
+  margin: 26px auto 32px;
+}
+
+.container-table {
+  width: 100%;
+  height: calc(100% - 140px);
+  margin: 26px auto 32px;
 }
