--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -32,5 +32,15 @@
   color: #313131;
   font-size: 16px;
   font-weight: 600;
+  border: 2px solid #E09C9E;
   background-color: #E09C9E;
+}
+
+.btn__cancel {
+  margin: 20px 0 0;
+  color: #E09C9E;
+  font-size: 16px;
+  font-weight: 600;
+  border: 2px solid #E09C9E;
+  background-color: transparent;
 }
