--- a/src/routes/LoginRegister/LoginRegister.css
+++ b/src/routes/LoginRegister/LoginRegister.css
@@ -10,6 +10,7 @@
   bottom: 0;
   right: 0;
   pointer-events: none;
+  z-index: 0;
 }
 
 .login__logo {
@@ -52,8 +53,63 @@
 .login section {
   width: 60%;
   margin: 20px auto 0;
+  position: relative;
+  z-index: 1;
 }
 
 .login__nav--hidden {
   display: none;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  color: #C4C4C4;
+  background-color: rgba(196,196,196,0.5);
+  overflow: auto;
+  z-index: 1;
+}
+
+.modal-content {
+  width: 90%;
+  margin: 15% auto;
+  padding: 20px;
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #313131;
+  border-radius: 8px;
+}
+
+.modal-content i {
+  float: right;
+}
+
+.modal-content h4 {
+  width: 100%;
+  margin-bottom: 24px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.modal-content p {
+  margin-bottom: 12px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.modal-content p span {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.modal-btn {
+  display: flex;
+  justify-content: space-between;
 }
