--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -12,9 +12,6 @@
 .header__group {
   padding: 8px 12px 14px;
   height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   position: relative;
 }
 
@@ -78,4 +75,10 @@
 .header__menu-bot img {
   height: 160%;
   display: block;
+}
+
+@media (min-width: 1024px){
+  .header__nav {
+    width: 30%;
+  }
 }
