--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -40,8 +40,22 @@ a {
   margin: 26px auto 32px;
 }
 
+.container-header {
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container-table {
   width: 100%;
   height: calc(100% - 140px);
   margin: 26px auto 32px;
+}
+
+@media (min-width: 1024px){
+  .container, .container-header, .container-table {
+    width: 800px;
+  }
 }
